Added configurations, migrated basic login to Spring Security login, removed validations from templates, etc.